--- a/web/css/index.css
+++ b/web/css/index.css
@@ -25,7 +25,7 @@
   --page-margin: 1rem;
   --hamburger: calc(var(--header-height) * 0.7);
   --transition-default: 0.3s;
-  --desktop-width: 50rem;
+  --desktop-width: 70rem;
   --hero-height: 15.3rem;
   --hero-height-mobile: 12.5rem;
   --robot-height: 19rem;
@@ -503,14 +503,14 @@ header.active {
 }
 
 #moz-links {
-  font-size: 0.7rem;
+  /*font-size: 0.7rem;*/
   color: white;
-  background-color: black;
+  background-color: #333333;
 }
 
 @media (min-width: 600px) {
   #moz-links {
-    height: 4rem;
+    /*height: 4rem;*/
     padding: 0.4rem 0;
   }
 }
@@ -541,12 +541,20 @@ header.active {
   height: 1.2rem;
 }
 
+#moz-links .links {
+  margin-top:30px;
+}
+
 #moz-links .links a {
   color: var(--color-help);
 }
 
 #moz-links .links > :first-child a {
   margin-right: 1.5rem;
+}
+
+#moz-links .content img {
+  margin: 1.5rem;
 }
 
 @media (max-width: 600px) {
@@ -576,9 +584,9 @@ header.active {
 }
 
 .tab .tab-name {
-  background-color: var(--color-text-help);
   transition: background-color 0.15s ease-in;
   padding: 0.2rem 6rem 0.2rem 0.6rem;
+  font-size:20px;
 }
 
 .tab.active .tab-name {
@@ -774,6 +782,7 @@ body:not(.ios) .recording #background-container {
 #content {
   transition: transform 0.2s var(--bounce-curve);
   transform: translateY(0);
+  min-height: 20rem;
 }
 
 #content.transitioning {
@@ -887,7 +896,6 @@ body:not(.ios) .recording #background-container {
 }
 
 #tally-box .tally-recordings {
-  width: 2rem;
   margin-right: 2rem;
   text-align: right;
   color: var(--color-speak);
@@ -1113,10 +1121,10 @@ body:not(.ios) .recording #background-container {
 
 @media (min-width: 600px) {
   #home-layout {
-    background-image: url("/img/strip-repeat.png");
     background-position: 2.5rem 0;
     background-size: 0.2rem;
     background-repeat: repeat-y;
+    top: -4.5rem;
   }
 }
 
@@ -1138,7 +1146,7 @@ body:not(.ios) .recording #background-container {
 }
 
 #home-layout .left-column {
-  padding-left: 8rem;
+  padding-left: 11rem;
   line-height: 1.55;
 }
 
@@ -1206,12 +1214,13 @@ body:not(.ios) .recording #background-container {
 }
 
 #home-container .validator {
-  margin-top: 2rem;
+
 }
 
 #listen-container {
   padding: 0.7rem;
   text-align: center;
+  padding-left:12rem;
 }
 
 #listen-container .listen-box {
@@ -1484,7 +1493,6 @@ body:not(.ios) .recording #background-container {
 }
 
 #profile-container .unsaved {
-  background-color: yellow;
 }
 
 #opt-in {
@@ -1612,7 +1620,7 @@ label[for="send-emails"] {
 .terms-content > h1:first-child,
 .privacy-content > h1:first-child {
   margin: 1rem 0;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
 }
 
 .privacy-content a {
